probably break hardware acceleration but fix overflow bug

--- a/src/components/app-wave/app-wave.css
+++ b/src/components/app-wave/app-wave.css
@@ -24,6 +24,8 @@
   min-width: 1000px;
   width: 100%;
   height: 100%;
+  /* fix some weird mobile only overflow problem */
+  transform: unset!important;
 }
 .wave svg path {
   fill: var(--color-secondary);
